Bone heads are hidden when non-connected parent is hidden #60421

Closed
opened 2019-01-11 15:39:24 +01:00 by Demeter Dzadik · 5 comments
Member

bonebug.webm

Blender Version
Broken: 2.80, f98e4cbedb

Short description of error
The heads of bones which are not connected to their parent become hidden when their parent is hidden.
The same happens when the bone IS connected, but I think that might be a design choice in 2.8.

Exact steps for others to reproduce the error

  • Spawn a new armature
  • Duplicate the bone (as opposed to extruding, so the child is not connected)
  • Parent one bone to the other
  • Hide the parent. The child's head disappears.
[bonebug.webm](https://archive.blender.org/developer/F6254637/bonebug.webm) **Blender Version** Broken: 2.80, f98e4cbedbb7 **Short description of error** The heads of bones which are not connected to their parent become hidden when their parent is hidden. The same happens when the bone IS connected, but I think that might be a design choice in 2.8. **Exact steps for others to reproduce the error** - Spawn a new armature - Duplicate the bone (as opposed to extruding, so the child is not connected) - Parent one bone to the other - Hide the parent. The child's head disappears.
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sebastian Parborg self-assigned this 2019-01-11 20:37:42 +01:00

I've posted a fix in D4194

I've posted a fix in [D4194](https://archive.blender.org/developer/D4194)

This issue was referenced by f916b43256

This issue was referenced by f916b43256a0a9cc351292be88616cde7a5ef5a8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60421
No description provided.