Fix T60421: Bone heads are hidden when non-connected parent is hidden

The root point of a bone is now always drawn unless it is connected to an other bone.

Reviewed By: Clément Foucault

Differential Revision: http://developer.blender.org/D4194